WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58473
REGRESSION: Links are clickable when a contentEditable is set to true
https://bugs.webkit.org/show_bug.cgi?id=58473
Summary
REGRESSION: Links are clickable when a contentEditable is set to true
Enrica Casucci
Reported
2011-04-13 13:14:14 PDT
Repro steps: 1. Launch Safari and navigate to
http://www.mozilla.org/editor/midasdemo/
2. Paste in the editor some content previously copied that contains links. 3. Click on one of the links Expected No navigation takes place. Actual The page pointed by the link gets loaded in the editor frame.
Attachments
Patch
(5.33 KB, patch)
2011-04-13 13:36 PDT
,
Enrica Casucci
no flags
Details
Formatted Diff
Diff
Patch2
(5.37 KB, patch)
2011-04-13 13:48 PDT
,
Enrica Casucci
mitz: review+
Details
Formatted Diff
Diff
Follow-up patch
(2.97 KB, patch)
2011-04-13 14:56 PDT
,
Enrica Casucci
no flags
Details
Formatted Diff
Diff
Patch4
(4.23 KB, patch)
2011-04-13 15:18 PDT
,
Enrica Casucci
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2011-04-13 13:14:34 PDT
<
rdar://problem/9256793
>
Enrica Casucci
Comment 2
2011-04-13 13:36:34 PDT
Created
attachment 89444
[details]
Patch
mitz
Comment 3
2011-04-13 13:40:23 PDT
Comment on
attachment 89444
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=89444&action=review
> Source/WebKit2/UIProcess/API/C/WKPreferencesPrivate.h:53 > +enum WKEditableLinkBehavior { > + WKEditableLinkDefaultBehavior, > + WKEditableLinkAlwaysLive, > + WKEditableLinkOnlyLiveWithShiftKey, > + WKEditableLinkLiveWhenNotFocused, > + WKEditableLinkNeverLive > +}; > +typedef enum WKEditableLinkBehavior WKEditableLinkBehavior;
CF-style constants should be prefixed with a lowercase k. These are also missing the word “Behavior”.
Enrica Casucci
Comment 4
2011-04-13 13:48:46 PDT
Created
attachment 89447
[details]
Patch2 Addresses Dan's comments.
Enrica Casucci
Comment 5
2011-04-13 14:27:20 PDT
http://trac.webkit.org/changeset/83766
Enrica Casucci
Comment 6
2011-04-13 14:56:07 PDT
Created
attachment 89469
[details]
Follow-up patch
WebKit Review Bot
Comment 7
2011-04-13 14:59:11 PDT
Attachment 89469
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit..." exit_code: 1 Source/WebKit2/UIProcess/API/C/WKAPICast.h:190: A case label should not be indented, but line up with its switch statement. [whitespace/indent] [4] Source/WebKit2/UIProcess/API/C/WKPreferences.cpp:34: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Enrica Casucci
Comment 8
2011-04-13 15:18:36 PDT
Created
attachment 89476
[details]
Patch4
mitz
Comment 9
2011-04-13 15:21:00 PDT
Comment on
attachment 89476
[details]
Patch4 View in context:
https://bugs.webkit.org/attachment.cgi?id=89476&action=review
> Source/WebKit2/UIProcess/API/C/WKAPICast.h:46 > +#include <WebCore/Settings.h>
Strange that this is needed here.
> Source/WebKit2/UIProcess/API/C/WKPreferences.cpp:34 > +#include <WebCore/Settings.h>
Ditto.
WebKit Review Bot
Comment 10
2011-04-13 15:21:09 PDT
Attachment 89476
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit..." exit_code: 1 Source/WebKit2/UIProcess/API/C/WKAPICast.h:190: A case label should not be indented, but line up with its switch statement. [whitespace/indent] [4] Source/WebKit2/UIProcess/API/C/WKAPICast.h:209: A case label should not be indented, but line up with its switch statement. [whitespace/indent] [4] Source/WebKit2/UIProcess/API/C/WKPreferences.cpp:34: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 3 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Enrica Casucci
Comment 11
2011-04-13 15:41:25 PDT
http://trac.webkit.org/changeset/83778
. Addressed style issues before landing.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug