REGRESSION: Links are clickable when a contentEditable is set to true. https://bugs.webkit.org/show_bug.cgi?id=58473 <rdar://problem/9256793>

Reviewed by Dan Bernstein.

Added support for editable link behavior property.

* Shared/WebPreferencesStore.cpp:
* Shared/WebPreferencesStore.h:
* UIProcess/API/C/WKPreferences.cpp:
(WKPreferencesSetEditableLinkBehavior):
(WKPreferencesGetEditableLinkBehavior):
* UIProcess/API/C/WKPreferencesPrivate.h:
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::updatePreferences):



Canonical link: https://commits.webkit.org/73523@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83766 268f45cc-cd09-0410-ab3c-d52691b4dbfc